--- a/offices.html
+++ b/offices.html
@@ -132,9 +132,16 @@
 	}		
 </style>
 
-<p>Offices are located across Canada. Most are equipped with external drop boxes that can be used for your tax returns and other correspondence. There is <strong>no walk-in counter service</strong> offered at these locations.</p>
+<p>Offices are located across Canada. Most are equipped with <a class="wb-lbx lbx-modal" href="#drpbx">external drop boxes</a> that can be used for your tax returns and other correspondence. There is <strong>no walk-in counter service</strong> offered at these locations.</p>
 
-<p>Drop boxes are typically emptied of their contents twice daily (more frequently during the tax filing season). Items are stamped by our mail operations the same day they are received. For the first clearance each morning, items are date stamped with the previous business day's date.</p>
+<section id="drpbx" class="mfp-hide modal-dialog modal-content overlay-def">
+	<header class="modal-header">
+		<h2 class="modal-title">Drop boxes</h2>
+	</header>
+		<div class="modal-body">
+			<p>Drop boxes are typically emptied of their contents twice daily (more frequently during the tax filing season). Items are stamped by our mail operations the same day they are received. For the first clearance each morning, items are date stamped with the previous business day's date.</p>
+		</div>
+</section>
 
 <div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
