--- a/offices.html
+++ b/offices.html
@@ -139,7 +139,8 @@
 		<h2 class="modal-title">Drop boxes</h2>
 	</header>
 		<div class="modal-body">
-			<p>Drop boxes are typically emptied of their contents twice daily (more frequently during the tax filing season). Items are stamped by our mail operations the same day they are received. For the first clearance each morning, items are date stamped with the previous business day's date.</p>
+			<p>Drop boxes are typically emptied of their contents twice daily (more frequently during the tax filing season).</p>
+			<p>Items are stamped by our mail operations the same day they are received. For the first clearance each morning, items are date stamped with the previous business day's date.</p>
 		</div>
 </section>
 
