--- a/offices.html
+++ b/offices.html
@@ -132,7 +132,8 @@
 	}		
 </style>
 
-<p>Offices are located across Canada. Most are equipped with <a class="wb-lbx lbx-modal" href="#drpbx">external drop boxes</a> that can be used for your tax returns and other correspondence. There is <strong>no walk-in counter service</strong> offered at these locations.</p>
+<p>Offices are located across Canada. Most are equipped with <a class="wb-lbx lbx-modal" href="#drpbx">external drop boxes</a> that can be used for your tax returns and other correspondence.</p>
+<p>There is <strong>no walk-in counter service</strong> offered at these locations.</p>
 
 <section id="drpbx" class="mfp-hide modal-dialog modal-content overlay-def">
 	<header class="modal-header">
@@ -144,7 +145,7 @@
 		</div>
 </section>
 
-<div id="osm_map" class="wb-geomap" data-wb-geomap='{ 
+<div id="osm_map" class="wb-geomap mrgn-tp-lg" data-wb-geomap='{ 
 	"layersFile": "https://fomag.github.io/temp/config-osm-en.min.js",
 	"tables": [ { 
 		"id": "cities", 
