--- a/tso-tc3.html
+++ b/tso-tc3.html
@@ -285,7 +285,7 @@
 275 Pope Road<br>
 Summerside PE &nbsp;C1N 6A2</p>
 </div>
-<footer class="panel-footer">Fax: 902-432-6287</footer>
+<footer class="panel-footer">Fax: 902-432-6287<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </div>
 </section>
@@ -302,7 +302,7 @@ Summerside PE &nbsp;C1N 6A2</p>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
-<footer class="panel-footer">Fax: 204-984-5164</footer>
+<footer class="panel-footer">Fax: 204-984-5164<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </div>
 </section>
@@ -319,7 +319,7 @@ Winnipeg MB &nbsp;R3C 3M3</p>
 1050 Notre Dame Avenue<br>
 Sudbury ON  &nbsp;P3A 5C2</p>
 </div>
-<footer class="panel-footer">Fax: 705-671-3994 and 1-855-276-1529</footer>
+<footer class="panel-footer">Fax: 705-671-3994 and 1-855-276-1529<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </div>
 </section>
@@ -336,7 +336,7 @@ Sudbury ON  &nbsp;P3A 5C2</p>
 Post Office Box 20000, Station A<br>
 Sudbury ON  &nbsp;P3A 5C1</p>
 </div>
-<footer class="panel-footer">Fax: 705-671-3994 and 1-855-276-1529</footer>
+<footer class="panel-footer">Fax: 705-671-3994 and 1-855-276-1529<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </div>
 </section>
@@ -353,7 +353,7 @@ Sudbury ON  &nbsp;P3A 5C1</p>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
-<footer class="panel-footer">Fax: 204-984-5164</footer>
+<footer class="panel-footer">Fax: 204-984-5164<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </div>
 <div class="clearfix"></div>
@@ -372,7 +372,7 @@ Winnipeg MB &nbsp;R3C 3M3</p>
 Post Office Box 14000, Station Main<br>
 Winnipeg MB &nbsp;R3C 3M2</p>
 </div>
-<footer class="panel-footer">Fax: 204-984-5164</footer>
+<footer class="panel-footer">Fax: 204-984-5164<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </div>
 </section>
@@ -390,7 +390,7 @@ Winnipeg MB &nbsp;R3C 3M2</p>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
-<footer class="panel-footer">Fax: 204-984-5164</footer>
+<footer class="panel-footer">Fax: 204-984-5164<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </section>
 
@@ -405,7 +405,7 @@ Winnipeg MB &nbsp;R3C 3M3</p>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
-<footer class="panel-footer">Fax: 204-984-5164</footer>
+<footer class="panel-footer">Fax: 204-984-5164<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </section>
 
@@ -420,7 +420,7 @@ Winnipeg MB &nbsp;R3C 3M3</p>
 Post Office Box 14001, Station Main<br>
 Winnipeg MB &nbsp;R3C 3M3</p>
 </div>
-<footer class="panel-footer">Fax: 204-984-5164</footer>
+<footer class="panel-footer">Fax: 204-984-5164<span class="pull-right"><a href="https://www.canada.ca/en/revenue-agency/services/e-services/submit-documents-online.html">Submit online instead</a></span></footer>
 </div>
 </section>
 
