--- a/offices.html
+++ b/offices.html
@@ -193,7 +193,8 @@
 	</thead>
 	<tbody>
 		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
-			<td>Victoria</td>
+			<td>Victoria<br>
+			(Vancouver Island and North TSO)</td>
 			<td>1415 Vancouver Street<br>Victoria BC V8V 3W4</td>
 		</tr>
 		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
