--- a/offices.html
+++ b/offices.html
@@ -156,7 +156,7 @@
 			"height": 200,
 			"width": 450,
 			"close": true,
-			"content": "<h4>_City</h4><p>_Address</p>"},
+			"content": "<p>_City</p><p>_Address</p>"},
 		"visible": true 
 	} ]					    
  }'>
@@ -194,7 +194,7 @@
 	<tbody>
 		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
 			<td>Victoria<br>
-			(Vancouver Island and North TSO)</td>
+				(Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr>)</td>
 			<td>1415 Vancouver Street<br>Victoria BC V8V 3W4</td>
 		</tr>
 		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
