--- a/offices.html
+++ b/offices.html
@@ -154,9 +154,9 @@
 		"popupsInfo": {
 			"id": "citiesPopup",
 			"height": 200,
-			"width": 450,
+			"width": 650,
 			"close": true,
-			"content": "<p>_City</p><p>_Address</p>"},
+			"content": "<h2 class="h6">_City</h2><p>_Address</p>"},
 		"visible": true 
 	} ]					    
  }'>
