--- a/offices.html
+++ b/offices.html
@@ -156,7 +156,7 @@
 			"height": 200,
 			"width": 650,
 			"close": true,
-			"content": "<h2 class="h6">_City</h2><p>_Address</p>"},
+			"content": "<h2 class='h6'>_City</h2><p>_Address</p>"},
 		"visible": true 
 	} ]					    
  }'>
