--- a/offices.html
+++ b/offices.html
@@ -154,7 +154,7 @@
 		"popupsInfo": {
 			"id": "citiesPopup",
 			"height": 200,
-			"width": 850,
+			"width": 450,
 			"close": true,
 			"content": "<p><strong>_City</strong></p><p>_Address</p>"},
 		"visible": true 
@@ -194,27 +194,32 @@
 	<tbody>
 		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
 			<td>Victoria<br>
-				(Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr>)</td>
+			(Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr>)</td>
 			<td>1415 Vancouver Street<br>Victoria BC V8V 3W4</td>
 		</tr>
 		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
-			<td>Vancouver</td>
+			<td>Vancouver<br>
+			(Vancouver <abbr title="Tax Services Offices">TSO</abbr>)</td>
 			<td>468 Terminal Ave<br>Vancouver BC  V6A 0C1</td>
 		</tr>	
 		<tr data-geometry="POINT (-122.846197 49.179788)" data-type="wkt">
-			<td>Surrey</td>
+			<td>Surrey<br>
+			Fraser Valley <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>9737 King George Boulevard<br>Surrey BC  V3T 5W6</td>
 		</tr>				
 		<tr data-geometry="POINT (-122.748619 53.918259)" data-type="wkt">
-			<td>Prince George</td>
+			<td>Prince George<br>
+			(Vancouver Island and North <abbr title="Tax Services Offices">TSO</abbr>)</td>
 			<td>280 Victoria Street<br>Prince George BC  V2L 4X3</td>
 		</tr>
 		<tr data-geometry="POINT (-119.595866 49.498695)" data-type="wkt">
-			<td>Penticton</td>
+			<td>Penticton<br>
+			(Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr>)</td>
 			<td>277 Winnipeg Street<br>Penticton BC  V2A 1N6</td>
 		</tr>
 		<tr data-geometry="POINT (-119.5647234 49.8871759)" data-type="wkt">
-			<td>Kelowna</td>
+			<td>Kelowna<br>
+			(Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC V1Y 6S5</td>
 		</tr>	
 	</tbody>
