--- a/offices.html
+++ b/offices.html
@@ -187,7 +187,7 @@
 <table id="cities" aria-label="Office location" class="table">
 	<thead>
 		<tr>
-			<th>City (Office)</th>
+			<th>City</th>
 			<th>Address</th>
 		</tr>
 	</thead>
