--- a/offices.html
+++ b/offices.html
@@ -156,7 +156,7 @@
 			"height": 200,
 			"width": 450,
 			"close": true,
-			"content": "<p><strong>_City</strong></p><p>_Address</p>"},
+			"content": "<p><strong>_City office</strong></p><p>_Address</p>"},
 		"visible": true 
 	} ]					    
  }'>
@@ -187,7 +187,7 @@
 <table id="cities" aria-label="Office location" class="table">
 	<thead>
 		<tr>
-			<th>City</th>
+			<th>City office</th>
 			<th>Address</th>
 		</tr>
 	</thead>
