--- a/offices.html
+++ b/offices.html
@@ -225,6 +225,7 @@
 	</tbody>
 </table>
 -->
+<summary>Office locations listed geographically from west to east</summary>
 <table id="cities" aria-label="Office locations" class="table">
 	<thead>
 		<tr>
