--- a/offices.html
+++ b/offices.html
@@ -182,51 +182,9 @@
 
 <br>
 
-<details><!--
-<summary>Office locations listed geographically from west to east</summary>	
-<table id="cities" aria-label="Office location" class="table">
-	<thead>
-		<tr>
-			<th>City - Office</th>
-			<th>Address</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
-			<td>Victoria<br>
-			(Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr>)</td>
-			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
-		</tr>
-		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
-			<td>Vancouver<br>
-			(Vancouver <abbr title="Tax Services Offices">TSO</abbr>)</td>
-			<td>468 Terminal Ave<br>Vancouver BC &nbsp;V6A 0C1</td>
-		</tr>	
-		<tr data-geometry="POINT (-122.846197 49.179788)" data-type="wkt">
-			<td>Surrey<br>
-			(Fraser Valley <abbr title="Tax Services Offices">TSO</abbr>)</td>
-			<td>9737 King George Boulevard<br>Surrey BC &nbsp;V3T 5W6</td>
-		</tr>				
-		<tr data-geometry="POINT (-122.748619 53.918259)" data-type="wkt">
-			<td>Prince George<br>
-			(Vancouver Island and North <abbr title="Tax Services Offices">TSO</abbr>)</td>
-			<td>280 Victoria Street<br>Prince George BC &nbsp;V2L 4X3</td>
-		</tr>
-		<tr data-geometry="POINT (-119.595866 49.498695)" data-type="wkt">
-			<td>Penticton<br>
-			(Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr>)</td>
-			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
-		</tr>
-		<tr data-geometry="POINT (-119.5647234 49.8871759)" data-type="wkt">
-			<td>Kelowna<br>
-			(Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr>)</td>
-			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
-		</tr>	
-	</tbody>
-</table>
--->
+<details>
 <summary>Office locations listed geographically from west to east</summary>
-<table id="cities" aria-label="Office locations" class="table">
+<table id="cities" aria-label="Office locations" class="table table-condensed">
 	<thead>
 		<tr>
 			<th>City</th>
@@ -266,8 +224,8 @@
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
 		</tr>	
 	</tbody>
-	</table>
-	</details>
+</table>
+</details>
 	
 <div class="pagedetails">
 <div class="row">
