--- a/offices.html
+++ b/offices.html
@@ -236,7 +236,7 @@
 			<th>City</th>
 			<th>Office</th>
 			<th>Address</th>
-			<th class="text-center"><span class="wb-inv">Notes</span><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></th>
+			<th><span class="wb-inv">Notes</span><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></th>
 		</tr>
 	</thead>
 	<tbody>
@@ -244,7 +244,8 @@
 			<td>Victoria</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
 			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
-			<td><a class="wb-lbx lbx-modal wb-init wb-lbx-inited" id="wb-auto-5" href="#nodrpbx"><span class="wb-inv">Note</span><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></a></td>
+			<!--<td><a class="wb-lbx lbx-modal wb-init wb-lbx-inited" id="wb-auto-5" href="#nodrpbx"><span class="wb-inv">Note</span><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></a></td>-->
+			<td><a class="wb-lbx lbx-modal" href="#drpbx">external drop boxes</a></td>
 		</tr>
 		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
 			<td>Vancouver</td>
@@ -288,6 +289,9 @@
 			<p>There is no drop box at this location.</p>
 		</div>
 </section>
+
+
+
 
 
 
