--- a/offices.html
+++ b/offices.html
@@ -196,7 +196,8 @@
 		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
 			<td>Victoria</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
-			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
+			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4<sup id="fn1-rf"><a class="fn-lnk" href="#fn1">
+   <span class="wb-inv">Footnote </span>1</a></sup></td>
 		</tr>
 		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
 			<td>Vancouver</td>
@@ -226,7 +227,19 @@
 	</tbody>
 </table>
 </details>
-	
+
+<aside class="wb-fnote" role="note">
+   <h2 id="fn">Footnotes</h2>
+   <dl>
+  <dt>Footnote 1</dt>
+  <dd id="fn1">
+    <p>This location does not have a drop box.</p>
+    <p class="fn-rtn"><a href="#fn1-rf"><span class="wb-inv">Return to footnote </span>1<span class="wb-inv">referrer</span></a></p>
+  </dd>
+</dl>
+</aside>
+
+
 	
 <div class="pagedetails">
 <div class="row">
