--- a/offices.html
+++ b/offices.html
@@ -194,10 +194,9 @@
 	</thead>
 	<tbody>
 		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
-			<td>Victoria</td>
+			<td>Victoria<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
-			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4<sup id="fn1-rf"><a class="fn-lnk" href="#fn1">
-   <span class="wb-inv">Footnote </span>1</a></sup></td>
+			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
 		</tr>
 		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
 			<td>Vancouver</td>
@@ -233,7 +232,7 @@
    <dl>
   <dt>Footnote 1</dt>
   <dd id="fn1">
-    <p>This location does not have a drop box.</p>
+    <p>This locere is no drop box at this location.</p>
     <p class="fn-rtn"><a href="#fn1-rf"><span class="wb-inv">Return to footnote </span>1<span class="wb-inv">referrer</span></a></p>
   </dd>
 </dl>
