--- a/offices.html
+++ b/offices.html
@@ -232,7 +232,7 @@
    <dl>
   <dt>Footnote 1</dt>
   <dd id="fn1">
-    <p>This locere is no drop box at this location.</p>
+    <p>There is no drop box at this location.</p>
     <p class="fn-rtn"><a href="#fn1-rf"><span class="wb-inv">Return to footnote </span>1<span class="wb-inv">referrer</span></a></p>
   </dd>
 </dl>
