--- a/offices.html
+++ b/offices.html
@@ -194,7 +194,7 @@
 	</thead>
 	<tbody>
 		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
-			<td>Victoria<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
+			<td>Victoria</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
 			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
 		</tr>
@@ -219,7 +219,7 @@
 			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
 		</tr>
 		<tr data-geometry="POINT (-119.5647234 49.8871759)" data-type="wkt">
-			<td>Kelowna</td>
+			<td>Kelowna<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
 		</tr>	
@@ -228,13 +228,20 @@
 </details>
 
 <aside class="wb-fnote" role="note">
-   <h2 id="fn">Footnotes</h2>
-   <dl>
-  <dt>Footnote 1</dt>
-  <dd id="fn1">
-    <p>There is no drop box at this location.</p>
-    <p class="fn-rtn"><a href="#fn1-rf"><span class="wb-inv">Return to footnote </span>1<span class="wb-inv">referrer</span></a></p>
-  </dd>
+<h2 id="fn">Footnotes</h2>
+<dl>
+	<dt>Footnote 1</dt>
+	<dd id="fn1">
+		<p>The drop box at this location is available only Monday to Friday from 8:30 am to 4:30 pm.</p>
+		<p class="fn-rtn"><a href="#fn1-rf"><span class="wb-inv">Return to footnote </span>1<span class="wb-inv">referrer</span></a></p>
+	</dd>
+</dl>
+<dl>
+	<dt>Footnote 2</dt>
+	<dd id="fn2">
+		<p>There is no drop box at this location.</p>
+		<p class="fn-rtn"><a href="#fn2-rf"><span class="wb-inv">Return to footnote </span>2<span class="wb-inv">referrer</span></a></p>
+	</dd>
 </dl>
 </aside>
 
