--- a/offices.html
+++ b/offices.html
@@ -203,7 +203,7 @@
 			<td>Vancouver <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>468 Terminal Ave<br>Vancouver BC &nbsp;V6A 0C1</td>
 		</tr>	
-		<tr data-geometry="POINT (-122.846197 49.179788)" data-type="wkt">
+		<tr data-geometry="POINT (-122.8483855 49.1795671)" data-type="wkt">
 			<td>Surrey</td>
 			<td>Fraser Valley <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>9737 King George Boulevard<br>Surrey BC &nbsp;V3T 5W6</td>
