--- a/offices.html
+++ b/offices.html
@@ -193,7 +193,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr data-geometry="POINT (-123.358011 48.4266505)" data-type="wkt">
+		<tr data-geometry="POINT (-123.3559719 48.426497)" data-type="wkt">
 			<td>Victoria</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
 			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
