--- a/offices.html
+++ b/offices.html
@@ -193,7 +193,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr data-geometry="POINT (-123.3559719 48.426497)" data-type="wkt">
+		<tr data-geometry="POINT (-123.3580057 48.4266505)" data-type="wkt">
 			<td>Victoria</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
 			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
@@ -208,21 +208,41 @@
 			<td>Fraser Valley <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>9737 King George Boulevard<br>Surrey BC &nbsp;V3T 5W6</td>
 		</tr>				
-		<tr data-geometry="POINT (-122.748619 53.918259)" data-type="wkt">
+		<tr data-geometry="POINT (-122.7508079 53.9180602)" data-type="wkt">
 			<td>Prince George</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>280 Victoria Street<br>Prince George BC &nbsp;V2L 4X3</td>
 		</tr>
-		<tr data-geometry="POINT (-119.595866 49.498695)" data-type="wkt">
+		<tr data-geometry="POINT (-119.598033 49.4984893)" data-type="wkt">
 			<td>Penticton</td>
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
 		</tr>
-		<tr data-geometry="POINT (-119.5647234 49.8871759)" data-type="wkt">
+		<tr data-geometry="POINT (-119.4967007 49.8870899)" data-type="wkt">
 			<td>Kelowna<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
-		</tr>	
+		</tr>
+		<tr data-geometry="POINT (-114.0612751 51.0497558)" data-type="wkt">
+			<td>Calgary</td>
+			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+		</tr>
+		<tr data-geometry="POINT (-113.4888321 53.5426456)" data-type="wkt">
+			<td>Edmonton</td>
+			<td>Edmonton <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+		</tr>
+		<tr data-geometry="POINT (112.8387233 49.6938558)" data-type="wkt">
+			<td>Lethbridge</td>
+			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+		</tr>
+		<tr data-geometry="POINT (-113.8140628 52.2687994)" data-type="wkt">
+			<td>Red Deer</td>
+			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+		</tr>
 	</tbody>
 </table>
 </details>
