--- a/offices.html
+++ b/offices.html
@@ -226,22 +226,22 @@
 		<tr data-geometry="POINT (-114.0612751 51.0497558)" data-type="wkt">
 			<td>Calgary</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
-			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+			<td>220 4th Avenue South East<br>Calgary AB &nbsp;T2G 0L1</td>
 		</tr>
 		<tr data-geometry="POINT (-113.4888321 53.5426456)" data-type="wkt">
 			<td>Edmonton</td>
 			<td>Edmonton <abbr title="Tax Services Offices">TSO</abbr></td>
-			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+			<td>9700 Jasper Avenue<br>Edmonton AB &nbsp;T5J 4C8</td>
 		</tr>
 		<tr data-geometry="POINT (-112.8387233 49.6938558)" data-type="wkt">
 			<td>Lethbridge</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
-			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+			<td>200-419 7th Street South<br>Lethbridge AB &nbsp;T1J 4A9</td>
 		</tr>
 		<tr data-geometry="POINT (-113.8140628 52.2687994)" data-type="wkt">
 			<td>Red Deer</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
-			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
+			<td>4996 49th Avenue<br>Red Deer AB &nbsp;T4N 6X2</td>
 		</tr>
 	</tbody>
 </table>
