--- a/offices.html
+++ b/offices.html
@@ -228,7 +228,7 @@
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>220 4th Avenue South East<br>Calgary AB &nbsp;T2G 0L1</td>
 		</tr>
-		<tr data-geometry="POINT (-113.81406 52.26880)" data-type="wkt">
+		<tr data-geometry="POINT (-113.8140628 52.2687994)" data-type="wkt">
 			<td>Red Deer</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>4996 49th Avenue<br>Red Deer AB &nbsp;T4N 6X2</td>
