--- a/offices.html
+++ b/offices.html
@@ -223,7 +223,7 @@
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
 		</tr>
-		<tr data-geometry="POINT (-114.0612751 51.0497558)" data-type="wkt">
+		<tr data-geometry="POINT (-114.059065 51.0497558)" data-type="wkt">
 			<td>Calgary</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>220 4th Avenue South East<br>Calgary AB &nbsp;T2G 0L1</td>
