--- a/offices.html
+++ b/offices.html
@@ -193,52 +193,52 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr data-geometry="POINT (-123.3580057 48.4266505)" data-type="wkt">
+		<tr data-geometry="POINT (-123.355834 48.426654)" data-type="wkt">
 			<td>Victoria</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
 			<td>1415 Vancouver Street<br>Victoria BC &nbsp;V8V 3W4</td>
 		</tr>
-		<tr data-geometry="POINT (-123.0958343 49.2714824)" data-type="wkt">
+		<tr data-geometry="POINT (-123.093658 49.271543)" data-type="wkt">
 			<td>Vancouver</td>
 			<td>Vancouver <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>468 Terminal Ave<br>Vancouver BC &nbsp;V6A 0C1</td>
 		</tr>	
-		<tr data-geometry="POINT (-122.8483855 49.1795671)" data-type="wkt">
+		<tr data-geometry="POINT (-122.846127 49.179560)" data-type="wkt">
 			<td>Surrey</td>
 			<td>Fraser Valley <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>9737 King George Boulevard<br>Surrey BC &nbsp;V3T 5W6</td>
 		</tr>				
-		<tr data-geometry="POINT (-122.7508079 53.9180602)" data-type="wkt">
+		<tr data-geometry="POINT (-122.748738 53.918063)" data-type="wkt">
 			<td>Prince George</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>280 Victoria Street<br>Prince George BC &nbsp;V2L 4X3</td>
 		</tr>
-		<tr data-geometry="POINT (-119.598033 49.4984893)" data-type="wkt">
+		<tr data-geometry="POINT (-119.595623 49.498491)" data-type="wkt">
 			<td>Penticton</td>
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
 		</tr>
-		<tr data-geometry="POINT (-119.4967007 49.8870899)" data-type="wkt">
+		<tr data-geometry="POINT (-119.494458 49.886962)" daa-type="wkt">
 			<td>Kelowna<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
 		</tr>
-		<tr data-geometry="POINT (-114.059065 51.0497558)" data-type="wkt">
+		<tr data-geometry="POINT (-114.059033 51.049773) data-type="wkt">
 			<td>Calgary</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>220 4th Avenue South East<br>Calgary AB &nbsp;T2G 0L1</td>
 		</tr>
-		<tr data-geometry="POINT (-113.811872 52.268789)" data-type="wkt">
+		<tr data-geometry="POINT (-113.811876 52.268785)" data-type="wkt">
 			<td>Red Deer</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>4996 49th Avenue<br>Red Deer AB &nbsp;T4N 6X2</td>
 		</tr>
-		<tr data-geometry="POINT (-113.4888321 53.5426456)" data-type="wkt">
+		<tr data-geometry="POINT (-113.486588 53.542585)" data-type="wkt">
 			<td>Edmonton</td>
 			<td>Edmonton <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>9700 Jasper Avenue<br>Edmonton AB &nbsp;T5J 4C8</td>
 		</tr>
-		<tr data-geometry="POINT (-112.8387233 49.6938558)" data-type="wkt">
+		<tr data-geometry="POINT (-112.836662 49.693722)" data-type="wkt">
 			<td>Lethbridge</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200-419 7th Street South<br>Lethbridge AB &nbsp;T1J 4A9</td>
