--- a/offices.html
+++ b/offices.html
@@ -218,12 +218,12 @@
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>277 Winnipeg Street<br>Penticton BC &nbsp;V2A 1N6</td>
 		</tr>
-		<tr data-geometry="POINT (-119.494458 49.886962)" daa-type="wkt">
+		<tr data-geometry="POINT (-119.494458 49.886962)" data-type="wkt">
 			<td>Kelowna<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
 		</tr>
-		<tr data-geometry="POINT (-114.059033 51.049773) data-type="wkt">
+		<tr data-geometry="POINT (-114.059033 51.049773)" data-type="wkt">
 			<td>Calgary</td>
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>220 4th Avenue South East<br>Calgary AB &nbsp;T2G 0L1</td>
