--- a/offices.html
+++ b/offices.html
@@ -243,6 +243,26 @@
 			<td>Southern Alberta <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200-419 7th Street South<br>Lethbridge AB &nbsp;T1J 4A9</td>
 		</tr>
+		<tr data-geometry="POINT (-106.659931 52.132465)" data-type="wkt">
+			<td>Saskatoon</td>
+			<td>Saskatchewan <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>340 3rd Avenue North<br>Saskatoon SK &nbsp;S7K 0A8</td>
+		</tr>
+		<tr data-geometry="POINT (-104.615002 50.448010)" data-type="wkt">
+			<td>Regina<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
+			<td>Saskatchewan <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1955 Smith Street<br>Regina SK &nbsp;S4P 2N9</td>
+		</tr>
+		<tr data-geometry="POINT (-99.952610 48.847471)" data-type="wkt">
+			<td>Brandon<sup id="fn2-rf"><a class="fn-lnk" href="#fn2"><span class="wb-inv">Footnote </span>2</a></sup></td></td>
+			<td>Brandon <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>210 - 153 11th Street<br>Brandon MB &nbsp;R7A 7K68</td>
+		</tr>
+		<tr data-geometry="POINT (-97.141214 49.887733)" data-type="wkt">
+			<td>Winnipeg</td>
+			<td>Winnipeg <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>325 Broadway<br>Winnipeg MB &nbsp;R3C 4T4</td>
+		</tr>
 	</tbody>
 </table>
 </details>
@@ -252,7 +272,7 @@
 <dl>
 	<dt>Footnote 1</dt>
 	<dd id="fn1">
-		<p>The drop box at this location is available only Monday to Friday from 8:30 am to 4:30 pm.</p>
+		<p>The drop box at this location is available only during business hours (Monday to Friday, 8:30 am to 4:30 pm).</p>
 		<p class="fn-rtn"><a href="#fn1-rf"><span class="wb-inv">Return to footnote </span>1<span class="wb-inv">referrer</span></a></p>
 	</dd>
 </dl>
