--- a/offices.html
+++ b/offices.html
@@ -263,6 +263,91 @@
 			<td>Winnipeg <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>325 Broadway<br>Winnipeg MB &nbsp;R3C 4T4</td>
 		</tr>
+		<tr data-geometry="POINT (-89.247505 48.383065)" data-type="wkt">
+			<td>Thunder Bay</td>
+			<td>Toronto West-Thunder Bay <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>130 South Syndicate Avenue<br>Thunder Bay ON &nbsp;P7E 1C7</td>
+		</tr>
+		<tr data-geometry="POINT (-83.043807 42.316300)" data-type="wkt">
+			<td>Windsor</td>
+			<td>London-Windsor <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>441 University Avenue West, Suite 101<br>Windsor ON &nbsp;N9A 5S8</td>
+		</tr>
+		<tr data-geometry="POINT (-81.252588 -81.252588)" data-type="wkt">
+			<td>London</td>
+			<td>London-Windsor <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>451 Talbot Street<br>London ON &nbsp;N6A 5E5</td>
+		</tr>
+		<tr data-geometry="POINT (-80.981727 46.520655)" data-type="wkt">
+			<td>Sudbury</td>
+			<td>North Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1050 Notre Dame Avenue<br>Sudbury ON &nbsp;P3A 5C1</td>
+		</tr>
+		<tr data-geometry="POINT (-80.483838 43.452868)" data-type="wkt">
+			<td>Kitchener</td>
+			<td>Kitchener/Waterloo <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>166 Frederick Street<br>Kitchener ON &nbsp;N2H 0A9</td>
+		</tr>
+		<tr data-geometry="POINT (-79.873610 43.259402)" data-type="wkt">
+			<td>Namilton</td>
+			<td>Hamilton Niagara <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>55 Bay Street North<br>Hamilton ON &nbsp;L8R 3P7</td>
+		</tr>
+		<tr data-geometry="POINT (-79.6842738 44.393736)" data-type="wkt">
+			<td>Barrie</td>
+			<td>North Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>81 Mulcaster Street<br>Barrie ON &nbsp;L4M 6T7</td>
+		</tr>
+		<tr data-geometry="POINT (-79.674674 43.622075)" data-type="wkt">
+			<td>Mississauga</td>
+			<td>Toronto West-Thunder Bay <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>5800 Hurontario Street<br>Mississauga ON &nbsp;Mississauga ON</td>
+		</tr>
+		<tr data-geometry="POINT (-79.411749 43.765915)" data-type="wkt">
+			<td>Toronto</td>
+			<td>Toronto North <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>5001 Yonge Street<br>Toronto ON &nbsp;M2N 6R9</td>
+		</tr>
+		<tr data-geometry="POINT (-79.3779828 43.646119)" data-type="wkt">
+			<td>Toronto</td>
+			<td>Toronto Centre <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1 Front Street West<br>Toronto ON &nbsp;M5J 2X6</td>
+		</tr>
+		<tr data-geometry="POINT (-79.256388 43.774345)" data-type="wkt">
+			<td>Toronto</td>
+			<td>Toronto East <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>200 Town Centre Court<br>Toronto ON &nbsp;M1P 4Y3</td>
+		</tr>
+		<tr data-geometry="POINT (-79.247803 43.158788)" data-type="wkt">
+			<td>St. Catharines</td>
+			<td>Hamilton Niagara <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>32 Church Street<br>St. Catharines ON &nbsp;L2R 3B9</td>
+		</tr>
+		<tr data-geometry="POINT (-79.019099 48.241991)" data-type="wkt">
+			<td>Rouyn-Noranda</td>
+			<td>Western Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>44 du Lac Avenue<br>Rouyn-Noranda QC &nbsp;T5J 4C8</td>
+		</tr>
+		<tr data-geometry="POINT (-78.344282 44.268589)" data-type="wkt">
+			<td>Peterborough</td>
+			<td>East Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1161 Crawford Drive<br>Peterborough ON &nbsp;K9J 6X6</td>
+		</tr>
+		<tr data-geometry="POINT (-77.384647 44.169917)" data-type="wkt">
+			<td>Belleville</td>
+			<td>East Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>11 Station Street<br>Belleville ON &nbsp;K8N 2S3</td>
+		</tr>
+		<tr data-geometry="POINT (-76.520434 44.260890)" data-type="wkt">
+			<td>Kingston</td>
+			<td>East Central Ontario <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1475 John Counter Boulevard<br>Kingston ON &nbsp;K7M 0E6</td>
+		</tr>
+		<tr data-geometry="POINT (-75.6999758 45.418293)" data-type="wkt">
+			<td>Ottawa</td>
+			<td>Ottawa <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>333 Laurier Avenue West<br>Ottawa ON &nbsp;K1A 0L9</td>
+		</tr>
 	</tbody>
 </table>
 </details>
