--- a/offices.html
+++ b/offices.html
@@ -289,7 +289,7 @@
 			<td>166 Frederick Street<br>Kitchener ON &nbsp;N2H 0A9</td>
 		</tr>
 		<tr data-geometry="POINT (-79.873610 43.259402)" data-type="wkt">
-			<td>Namilton</td>
+			<td>Hamilton</td>
 			<td>Hamilton Niagara <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>55 Bay Street North<br>Hamilton ON &nbsp;L8R 3P7</td>
 		</tr>
@@ -347,6 +347,86 @@
 			<td>Ottawa</td>
 			<td>Ottawa <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>333 Laurier Avenue West<br>Ottawa ON &nbsp;K1A 0L9</td>
+		</tr>
+		<tr data-geometry="POINT (-75.696693 45.475245)" data-type="wkt">
+			<td>Gatineau</td>
+			<td>Western Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>85 Chemin de La Savane<br>Gatineau, QC &nbsp;K1A 1L4</td>
+		</tr>
+		<tr data-geometry="POINT (-73.759242 45.566347)" data-type="wkt">
+			<td>Laval</td>
+			<td>Western Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>3400 Jean-Béraud Avenue<br>Laval QC &nbsp;H7T 2Z2</td>
+		</tr>
+		<tr data-geometry="POINT (-73.564410 45.505992)" data-type="wkt">
+			<td>Montréal</td>
+			<td>Montréal <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>305 René-Lévesque Boulevard West<br>Montréal QC &nbsp;H2Z 1A6</td>
+		</tr>
+		<tr data-geometry="POINT (-73.455644 45.463779)" data-type="wkt">
+			<td>Brossard</td>
+			<td>Central and Southern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>3250 Lapinière Boulevard<br>Brossard QC &nbsp;J4Z 3T8</td>
+		</tr>
+		<tr data-geometry="POINT (-72.550334 46.335667)" data-type="wkt">
+			<td>Trois-Rivières</td>
+			<td>Central and Southern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>2250 St-Olivier Street<br>Trois-Rivières, QC &nbsp;G9A 4E9</td>
+		</tr>
+		<tr data-geometry="POINT (-71.894764 45.399699)" data-type="wkt">
+			<td>Sherbrooke</td>
+			<td>Central and Southern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>50 Place de la Cité<br>Sherbrooke QC &nbsp;J1H 5L8</td>
+		</tr>
+		<tr data-geometry="POINT (-71.213815 46.845567)" data-type="wkt">
+			<td>Québec</td>
+			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>2575 Ste Anne Boulevard<br>Québec QC &nbsp;G1J 1Y5</td>
+		</tr>
+		<tr data-geometry="POINT (-71.060387 48.429626)" data-type="wkt">
+			<td>Chicoutimi</td>
+			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>100 La Fontaine Street<br>Chicoutimi QC &nbsp;G7H 6X2</td>
+		</tr>
+		<tr data-geometry="POINT (-68.525788 48.450163)" data-type="wkt">
+			<td>Rimouski</td>
+			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>Suite 101, 180 de la Cathédrale Avenue<br>Rimouski QC &nbsp;G5L 5H9</td>
+		</tr>
+		<tr data-geometry="POINT (-66.060854 45.270853)" data-type="wkt">
+			<td>Saint John</td>
+			<td>New Brunswick <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>65 Canterbury Street<br>Saint John NB &nbsp;E2L 2C7</td>
+		</tr>
+		<tr data-geometry="POINT (-65.646192 47.610901)" data-type="wkt">
+			<td>Bathurst</td>
+			<td>New Brunswick <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>955 Murray Avenue<br>Bathurst NB &nbsp;E2A 0C8</td>
+		</tr>
+		<tr data-geometry="POINT (-64.777330 46.088083)" data-type="wkt">
+			<td>Moncton</td>
+			<td>New Brunswick <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>217-770 Main St<br>Moncton NB &nbsp;E1C 1E7</td>
+		</tr>
+		<tr data-geometry="POINT (-63.675277 44.640838)" data-type="wkt">
+			<td>Halifax</td>
+			<td>Nova Scotia <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>100-145 Hobsons Lake Drive<br>Halifax NS &nbsp;B3J 2T5</td>
+		</tr>
+		<tr data-geometry="POINT (-63.120901 46.261656)" data-type="wkt">
+			<td>Charlottetown</td>
+			<td>Prince Edward Island <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>1-30 Brackley Point Road<br>Charlottetown PE &nbsp;C1A 6X9</td>
+		</tr>
+		<tr data-geometry="POINT (-60.195108 46.141256)" data-type="wkt">
+			<td>Sydney</td>
+			<td>Nova Scotia <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>47 Dorchester Street<br>Sydney NS &nbsp;B1P 7H5</td>
+		</tr>
+		<tr data-geometry="POINT (-52.703087 47.568358)" data-type="wkt">
+			<td>St. John's</td>
+			<td>Newfoundland and Labrador <abbr title="Tax Services Offices">TSO</abbr></td>
+			<td>Sir Humphrey Gilbert Building<br>165 Duckworth Street<br>St. John's NL &nbsp;A1B 1G4</td>
 		</tr>
 	</tbody>
 </table>
