--- a/offices.html
+++ b/offices.html
@@ -193,6 +193,11 @@
 		</tr>
 	</thead>
 	<tbody>
+		<tr data-geometry="POINT (-135.055647 60.719378)" data-type="wkt">
+			<td>Whitehorse</td>
+			<td>Whitehorse <abbr title="Northern Service Centre">NSC</abbr></td>
+			<td>Elijah Smith Building<br>300 Main Street<br>Whitehorse, YT &nbsp;Y1A 2B5</td>
+		</tr>
 		<tr data-geometry="POINT (-123.355834 48.426654)" data-type="wkt">
 			<td>Victoria</td>
 			<td>Vancouver Island and North <abbr title="Tax Services Office">TSO</abbr></td>
@@ -222,6 +227,11 @@
 			<td>Kelowna<sup id="fn1-rf"><a class="fn-lnk" href="#fn1"><span class="wb-inv">Footnote </span>1</a></sup></td>
 			<td>Southern Interior B.C. <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>200 - 471 Queensway Avenue<br>Kelowna BC &nbsp;V1Y 6S5</td>
+		</tr>
+		<tr data-geometry="POINT (-114.373037 62.453132)" data-type="wkt">
+			<td>Yellowknife</td>
+			<td>Yellowknife <abbr title="Northern Service Centre">NSC</abbr></td>
+			<td>Greenstone Building<br>5101 Franklin Ave<br>Yellowknife, NT &nbsp;X1A 3Z4</td>
 		</tr>
 		<tr data-geometry="POINT (-114.059033 51.049773)" data-type="wkt">
 			<td>Calgary</td>
@@ -392,6 +402,11 @@
 			<td>Rimouski</td>
 			<td>Eastern Quebec <abbr title="Tax Services Offices">TSO</abbr></td>
 			<td>Suite 101, 180 de la Cathédrale Avenue<br>Rimouski QC &nbsp;G5L 5H9</td>
+		</tr>
+		<tr data-geometry="POINT (-68.523060 63.749211)" data-type="wkt">
+			<td>Iqaluit</td>
+			<td>Iqaluit <abbr title="Northern Service Centre">NSC</abbr></td>
+			<td>Qilaut Building<br>933 Mivvik Stree<br>Iqaluit, NU &nbsp;X0A 0H0</td>
 		</tr>
 		<tr data-geometry="POINT (-66.060854 45.270853)" data-type="wkt">
 			<td>Saint John</td>
